# shmup

./: .gitignore  CMakeLists.txt  build.bat
include/: constants.h  drawable.h  game.h  ui.h  utils.h
src/: drawable.c  game.c  main.c  ui.c  utils.c
